Remove duplicate download button. Also fix alignment.

--- a/web/css/prj-web.css
+++ b/web/css/prj-web.css
@@ -30,7 +30,6 @@
     margin-right: 20px;
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
 }
 
 .header-button {
